# tiger-compiler

./: .gitignore  .last-cl-gen  AUTHORS.txt  Makefile  NEWS.txt  README  README.txt  TODO  auto.sh  configure.ac  parse.yy  scan.ll  test-suite.sh
lib/misc/: local.am  scoped-map.hh  scoped-map.hxx  symbol.hxx  unique.hxx  variant.hxx
src/: parse.yy
src/ast/: README.txt  any-decs.hxx  array-exp.cc  array-exp.hh  array-exp.hxx  assign-exp.cc  assign-exp.hh  assign-exp.hxx  break-exp.cc  break-exp.hh  break-exp.hxx  call-exp.cc  call-exp.hh  call-exp.hxx  dec.hh  decs-list.hh  default-visitor.hxx  escapable.cc  escapable.hh  escapable.hxx  exp.hh  field-var.cc  field-var.hh  field-var.hxx  if-exp.cc  if-exp.hh  if-exp.hxx  int-exp.hh  let-exp.cc  let-exp.hh  let-exp.hxx  method-call-exp.cc  method-call-exp.hh  method-call-exp.hxx  method-dec.hh  name-ty.hh  nil-exp.hh  object-exp.cc  object-exp.hh  object-exp.hxx  (+29 more)
src/astclone/: cloner.cc  libastclone.hxx  tasks.cc  tasks.hh
src/bind/: binder.cc  binder.hh  binder.hxx  libbind.cc  libbind.hh  renamer.cc  renamer.hh  renamer.hxx  tasks.cc  tasks.hh
src/callgraph/: fundec-graph.hh  tasks.cc  tasks.hh
src/desugar/: bounds-checking-visitor.hh  desugar-visitor.cc  desugar-visitor.hh  libdesugar.cc  tasks.cc  tasks.hh
src/escapes/: escapes-visitor.cc  escapes-visitor.hh  tasks.hh
src/inlining/: libinlining.cc  tasks.cc  tasks.hh
src/object/: binder.cc  binder.hh  desugar-visitor.cc  desugar-visitor.hh  libobject.cc  libobject.hh  local.am  overfun-binder.hh  overfun-type-checker.hh  renamer.cc  tasks.cc  tasks.hh  test-desugar.cc  type-checker.cc
src/overload/: tasks.cc
src/parse/: parsetiger.yy  scantiger.ll  tasks.cc  test-tweast.cc  tiger-parser.cc  tiger-parser.hh  tweast.hh  tweast.hxx
src/type/: array.cc  array.hh  array.hxx  attribute.hh  attribute.hxx  builtin-types.cc  builtin-types.hh  class.cc  class.hh  class.hxx  default-visitor.hxx  field.hh  function.cc  function.hh  libtype.cc  method.cc  method.hh  method.hxx  named.cc  named.hxx  nil.cc  nil.hh  pretty-printer.cc  record.cc  record.hh  tasks.cc  tasks.hh  type-checker.cc  type.hxx  (+2 more)
tests/: Makefile  Makefile.am  test-suite.sh
tests/bind/: assign.tig  bind.tig  bind_2.tig  break-in-for-high.tig  break-in-for-init.tig  break-in-function-in-while.tig  fbfsb.tig  foo-stop-bar.tig  main_redefinition.tig  main_redefinition_in_inner_scope.tig  scope-false.tig  scope-true.tig  tome.tig  typedec.tig  undeclared-variable.tig  unknown-field-type.tig  while.tig
tests/good/: a+a.tig  and-false-test.tig  and-true-test.tig  array.tig  bind_2.tig  box.tig  break-in-embedded-loops.tig  class-foo.tig  class-scopes.tig  fbfsb.tig  foo-bar.tig  foo-stop-bar.tig  for-in-a-if.tig  for-loop.tig  for-steps.tig  fortytwo-fn.tih  fortytwo-main.tig  fortytwo-var.tih  if-in-a-for.tig  if-in-a-if.tig  me.tig  meme.tig  or-and-false-1-test.tig  or-and-false-2-test.tig  or-and-true-test.tig  or-false-test.tig  or-true-test.tig  queens.tig  reverse-for.tig  simple-fact.tig  test00.tig  test01.tig  variable-escapes.tig
tests/syntax/: 1s-errorm.tig  if-error-two-else.tig  test01.tig  unterminated-comment.tig  unterminated-string.tig
